[package]
name = "cryptopals"
version = "0.0.1"
authors = ["ar.cantor@gmail.com"]

[dependencies.openssl]
git = "https://github.com/sfackler/rust-openssl.git"
rev = "a2199e01329335616eb18f619b72de13cef94b16"

[dependencies.static_mdo]
git = "https://github.com/cantora/static_mdo"

[dependencies]
bitflags = "0.1.1"
rustc-serialize = "0.3"
rand = "0.3"
